# evolve

./: .gitignore  Cargo.toml  Makefile  README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  cz.toml
src/: creature.rs  main.rs  types.rs  world.rs  world_iteration.rs
